[package]
name = "binance_bot"
version = "0.11.0"
edition = "2021"
[dependencies]
# 1.
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
# 2. 
teloxide = { version = "0.11", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }

binance = { git = "https://github.com/wisespace-io/binance-rs.git" }